--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sharp": "^0.28.3"
   },
   "jest": {
     "verbose": true,
