--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
     "start": "webpack --config ./tools/webpack.dev.js --watch",
-    "build": "webpack --config ./tools/webpack.dev.js --watch",
+    "build": "webpack --config ./tools/webpack.prod.js && node ./dist/main",
     "test": "jest --watch"
   },
   "repository": {
