--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
-    "start": "webpack --config ./tools/webpack.dev.js --watch",
-    "build": "webpack --config ./tools/webpack.prod.js && node ./dist/main",
     "heroku-postbuild": "webpack --config ./tools/webpack.prod.js",
+    "start:prod": "node ./dist/main",
     "test": "jest --watch"
   },
   "repository": {
