--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "passport.socketio": "^3.7.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "redis": "^4.0.0-rc.1",
     "sequelize": "^6.5.0",
     "sharp": "^0.28.3",
     "socket.io": "^4.2.0",
