--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
+    "pm2": "pm2 start processes.json --no-daemon",
     "start:dev": "webpack --config ./tools/webpack.dev.js --watch",
     "build": "webpack --config ./tools/webpack.prod.js",
     "start": "node ./dist/main",
@@ -37,6 +38,7 @@
     "@babel/polyfill": "^7.12.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "coinbase-commerce-node": "^1.0.4",
     "compression": "^1.7.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -50,6 +52,7 @@
     "passport.socketio": "^3.7.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "pm2": "^5.1.1",
     "redis": "^4.0.0-rc.1",
     "sequelize": "^6.5.0",
     "sharp": "^0.28.3",
@@ -59,5 +62,9 @@
   "jest": {
     "verbose": true,
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "14.X",
+    "npm": "7.X"
   }
 }
