--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,10 @@
+upstream bluestore {
+    server bluestore:5000;
+}
+
 server {
 	listen 80;
 	location / {
-		proxy_pass http://bluestore:3000;
-		proxy_redirect off;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-		add_header X-Frame-Options "SAMEORIGIN" always;
-		add_header X-XSS-Protection "1; mode=block" always;
-		add_header X-Content-Type-Options "nosniff" always;
-		add_header Referrer-Policy "no-referrer-when-downgrade" always;
-		add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline'" always;
+		proxy_pass http://bluestore;
 	}
 }
