--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
     "pm2": "pm2 start processes.json --no-daemon",
+    "pm2:stop": "pm2 stop processes.json",
+    "pm2:list": "pm2 list",
+    "pm2:delete": "pm2 delete processes.json",
     "start:dev": "webpack --config ./tools/webpack.dev.js --watch",
     "build": "webpack --config ./tools/webpack.prod.js",
     "start": "node ./dist/main",
@@ -35,7 +38,6 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "coinbase-commerce-node": "^1.0.4",
