--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,9 @@
 FROM nginx
+
+ARG PORT
+
+RUN echo $PORT
+
 COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
