--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blackbock-services",
+  "name": "blue-store",
   "version": "1.0.0",
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
