--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3.9"
 services:
-  herokuPostgresql:
+  postgresql:
     image: postgres
-    # environment: .postgres.env
+    environment: .postgres.env
   #     POSTGRES_USER: postgres
   #     POSTGRES_PASSWORD: postgres
   #   volumes:
   #     - bluestore-db:/var/lib/postgresql/data
 
-  # redis:
-  #   image: redis:alpine
+  redis:
+    image: redis:alpine
+    environment: .redis.env
   #   volumes:
   #     - bluestore-redis:/var/lib/redis/key
   # redis:
@@ -56,8 +57,8 @@ services:
       # REDIS_PORT: 14405
       # COINBASE_API_KEY: 0b427908-e03a-414b-a569-fa14db4cc601
     links:
-      - herokuPostgresql
-      # - redis
+      - postgresql
+      - redis
       
   # forms:
   #   image: "mcr.microsoft.com/azure-cognitive-services/form-recognizer/layout"
