--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,8 +3,8 @@ upstream bluestore {
 }
 
 server {
-	listen $PORT;
-	; listen 80;
+	# listen $PORT;
+	listen 80;
 	location / {
 		proxy_pass http://bluestore;
 	}
