--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ typings/
 .env.test
 .redis.env
 .postgres.env
+.db.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -114,3 +115,4 @@ resources/temporary/*
 cert.pem
 key.pem
 ca-certificate.crt
+postgress_ssl.crt
