--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,30 @@
 version: "3.9"
 services:
-  postgresql:
-    image: postgres
-    environment: .postgres.env
+  # postgresql:
+  #   image: postgres
+  #   env_file: .env
+  #   environment:
+  #     - DB_HOST:${DB_HOST}
+  #     - DB_SCHEMA:${DB_SCHEMA}
+  #     - DB_USER:${DB_USER}
+  #     - DB_PASSWORD:${DB_PASSWORD}
+  #     - DB_PORT:${DB_PORT}
+    #   - DB_USER:db
+    #   - MONGO_PORT=${MONGO_PORT
+    #   - MONGO_DB=${MONGO_DB
   #     POSTGRES_USER: postgres
   #     POSTGRES_PASSWORD: postgres
   #   volumes:
   #     - bluestore-db:/var/lib/postgresql/data
 
-  redis:
-    image: redis:alpine
-    environment: .redis.env
+  # redis:
+  #   image: redis:alpine
+  #   env_file: .env
+  #   environment:
+  #     - REDIS_HOST:${REDIS_HOST}
+  #     - REDIS_PORT:${REDIS_PORT}
+  #     - REDIS_USER:${REDIS_USER}
+  #     - REDIS_PASSWORD:${REDIS_PASSWORD}
   #   volumes:
   #     - bluestore-redis:/var/lib/redis/key
   # redis:
@@ -22,8 +36,8 @@ services:
     restart: always
     build:
       context: ./nginx
-    # ports:
-    #   - "3050:80"
+    ports:
+      - "3050:80"
 
   # bluestore:
   #   build:
@@ -45,6 +59,17 @@ services:
   bluestore:
     build:
       context: .
+    env_file: .env
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_SCHEMA=${DB_SCHEMA}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_PORT=${DB_PORT}
     # environment:
       # PORT: 3000
       # REDIS_HOST: redis-14405.c1.us-west-2-2.ec2.cloud.redislabs.com
@@ -56,9 +81,9 @@ services:
       # REDIS_PASSWORD: 123456789
       # REDIS_PORT: 14405
       # COINBASE_API_KEY: 0b427908-e03a-414b-a569-fa14db4cc601
-    links:
-      - postgresql
-      - redis
+    # links:
+    #   - postgresql
+    #   - redis
       
   # forms:
   #   image: "mcr.microsoft.com/azure-cognitive-services/form-recognizer/layout"
