--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,19 @@
 version: "3.9"
 services:
-  # postgresql:
-  #   image: postgres
-  #   env_file: .env
-  #   environment:
-  #     - DB_HOST:${DB_HOST}
-  #     - DB_SCHEMA:${DB_SCHEMA}
-  #     - DB_USER:${DB_USER}
-  #     - DB_PASSWORD:${DB_PASSWORD}
-  #     - DB_PORT:${DB_PORT}
-    #   - DB_USER:db
-    #   - MONGO_PORT=${MONGO_PORT
-    #   - MONGO_DB=${MONGO_DB
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  #   volumes:
-  #     - bluestore-db:/var/lib/postgresql/data
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - bluestore-db:/var/lib/postgresql/data
 
-  # redis:
-  #   image: redis:alpine
-  #   env_file: .env
-  #   environment:
-  #     - REDIS_HOST:${REDIS_HOST}
-  #     - REDIS_PORT:${REDIS_PORT}
-  #     - REDIS_USER:${REDIS_USER}
-  #     - REDIS_PASSWORD:${REDIS_PASSWORD}
-  #   volumes:
-  #     - bluestore-redis:/var/lib/redis/key
-  # redis:
-  #   image: redis-14405.c1.us-west-2-2.ec2.cloud.redislabs.com
+  redis:
+    image: redis:alpine
+    env_file: .env
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - bluestore-redis:/var/lib/redis/key
   
   nginx:
     depends_on:
@@ -39,79 +24,25 @@ services:
     ports:
       - "3050:80"
 
-  # bluestore:
-  #   build:
-  #     context: .
-  #   environment:
-  #     # PORT: 3000
-  #     REDIS_HOST: redis
-  #     DB_HOST: postgres
-  #     DB_SCHEMA: d1u7fngq9od0db
-  #     DB_USER: tmyowcionbpewx
-  #     DB_PASSWORD: fce45cba47799c0c14b10bb394e58de83e1720daae17963c3573168c2fd32093
-  #     REDIS_USER: default
-  #     REDIS_PASSWORD: 123456
-  #     REDIS_PORT: 6379
-  #     COINBASE_API_KEY: 0b427908-e03a-414b-a569-fa14db4cc601
-  #   depends_on:
-  #     - postgres
-  #     - redis
   bluestore:
     build:
       context: .
     env_file: .env
     environment:
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
-      - REDIS_USER=${REDIS_USER}
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_SCHEMA=${DB_SCHEMA}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_PORT=${DB_PORT}
-    # environment:
       # PORT: 3000
-      # REDIS_HOST: redis-14405.c1.us-west-2-2.ec2.cloud.redislabs.com
-      # DATABASE_URL: postgres://jtekvveegiyhcv:b87b1380aadc52a5e61ea40906be13182aaca52dc96b2747abf3305be6ebb9d8@herokuPostgresql:5432/db4q8a5e0bp1tt
-      # DB_SCHEMA: du9bmas6ral26
-      # DB_USER: gmpjtzkpscbcgr
-      # DB_PASSWORD: 772832db1aaff7b72924f53ca2ea6d6daee95264ab2618f8e26434956d82a9b3
-      # REDIS_USER: default
-      # REDIS_PASSWORD: 123456789
-      # REDIS_PORT: 14405
-      # COINBASE_API_KEY: 0b427908-e03a-414b-a569-fa14db4cc601
-    # links:
-    #   - postgresql
-    #   - redis
-      
-  # forms:
-  #   image: "mcr.microsoft.com/azure-cognitive-services/form-recognizer/layout"
-  #   environment:
-  #      eula: accept
-  #      billing: # < Your form recognizer billing URL >
-  #      apikey: # < Your form recognizer API key >
-  #      FormRecognizer__ComputerVisionApiKey: # < Your form recognizer API key >
-  #      FormRecognizer__ComputerVisionEndpointUri: # < Your form recognizer URI >
-  #   volumes:
-  #      - type: bind
-  #        source: E:\publicpreview\output
-  #        target: /output
-  #      - type: bind
-  #        source: E:\publicpreview\input
-  #        target: /input
-  #   ports:
-  #     - "5010:5000"
+      - REDIS_HOST:${REDIS_HOST}
+      - DB_HOST:${DB_HOST}
+      - DB_SCHEMA:${DB_SCHEMA}
+      - DB_USER:${DB_USER}
+      - DB_PASSWORD:${DB_USER}
+      - REDIS_USER:${DB_USER}
+      - REDIS_PASSWORD:${REDIS_PASSWORD}
+      - REDIS_PORT:${REDIS_PORT}
+      - COINBASE_API_KEY:${COINBASE_API_KEY}
+    depends_on:
+      - postgres
+      - redis
 
-  # ocr:
-  #   image: "mcr.microsoft.com/azure-cognitive-services/vision/read:3.1-preview"
-  #   environment:
-  #     eula: accept
-  #     apikey: # < Your computer vision API key >
-  #     billing: # < Your computer vision billing URL >
-  #   ports:
-  #     - "5021:5000"
-
-# volumes:
-#   bluestore-db:
-#   bluestore-redis:
+volumes:
+  bluestore-db:
+  bluestore-redis:
