update nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,9 +3,10 @@ upstream bluestore {
 }
 
 server {
-	# listen $PORT;
-	listen 80;
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
-		proxy_pass http://bluestore;
+	     proxy_pass http://bluestore;
 	}
 }
