--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,8 @@ upstream bluestore {
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
+	listen 443 default_server;
+	listen [::]:443 default_server;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
 	     proxy_pass http://bluestore;
