--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,10 +3,12 @@ upstream bluestore {
 }
 
 server {
-	listen 443 default_server;
-	listen [::]:443 default_server;
-	ssl on;
-	ssl_certificate blackstoregb_com_chain.crt;
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	# listen 443 default_server;
+	# listen [::]:443 default_server;
+	# ssl on;
+	# ssl_certificate blackstoregb_com_chain.crt;
 	
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
