--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
   redis:
     image: redis:alpine
     env_file: .env
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    environment:
+      - REDIS_PASSWORD:${REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     volumes:
       - bluestore-redis:/var/lib/redis/key
   
@@ -23,14 +25,13 @@ services:
       context: ./nginx
     ports:
       - "80:80"
-      # - "443:443"
+      - "443:443"
 
   bluestore:
     build:
       context: .
     env_file: .env
     environment:
-      # PORT: 3000
       - REDIS_HOST:${REDIS_HOST}
       - DB_HOST:${DB_HOST}
       - DB_SCHEMA:${DB_SCHEMA}
