--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,13 +3,17 @@ upstream bluestore {
 }
 
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	# listen 443 default_server;
-	# listen [::]:443 default_server;
-	# ssl on;
-	# ssl_certificate blackstoregb_com_chain.crt;
-	
+	listen 80;
+	server_name blackstoregb.com www.blackstoregb.com;
+	location / {
+	    return 301 https://$server_name$request_uri;
+	}
+}
+
+server {
+	listen 443 ssl;
+	ssl_certificate blackstoregb_com_chain.crt;
+	ssl_certificate_key blackstoregb_com.key;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
 	     proxy_pass http://bluestore;
