--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
   redis:
     image: redis:alpine
     env_file: .env
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    environment:
+      - REDIS_PASSWORD:${REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     volumes:
       - bluestore-redis:/var/lib/redis/key
   
@@ -22,7 +24,7 @@ services:
     build:
       context: ./nginx
     ports:
-      - "80:80"
+      - "3050:80"
       # - "443:443"
 
   bluestore:
