--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,13 @@ server {
 	ssl_certificate_key blackstoregb_com.key;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
-	     proxy_pass http://bluestore;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+		
+	    proxy_pass http://bluestore;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
 	}
 }
