--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,8 @@ server {
 	ssl_certificate_key blackstoregb_com.key;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
+		root /app/resources;
+		# try_files $uri $uri/ @express;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
 		
