update static files nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,9 +15,13 @@ server {
 	ssl_certificate blackstoregb_com_chain.crt;
 	ssl_certificate_key blackstoregb_com.key;
 	server_name blackstoregb.com www.blackstoregb.com;
+	root /app/resources;
+
 	location / {
-		root /app/resources;
-		# try_files $uri $uri/ @express;
+		try_files $uri @bluestore;
+	}
+
+	location @bluestore {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
 		
