--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,10 +15,10 @@ server {
 	ssl_certificate blackstoregb_com_chain.crt;
 	ssl_certificate_key blackstoregb_com.key;
 	server_name blackstoregb.com www.blackstoregb.com;
-	root /app/resources;
 
 	location / {
-		try_files $uri @bluestore;
+		root /app/resources;
+		try_files $uri $uri/ @bluestore;
 	}
 
 	location @bluestore {
