--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,10 @@ services:
     depends_on:
       - postgres
       - redis
+    volumes:
+      - bluestore-storeage:/var/lib/resources
 
 volumes:
   bluestore-db:
   bluestore-redis:
+  bluestore-storeage:
