--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - redis
     volumes:
       - bluestore-storeage:/var/lib/resources
-      - ./resources/*:/var/lib/resources/
+      - ./resources/static/*:/var/lib/resources/static
 
 volumes:
   bluestore-db:
