--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,6 @@ server {
 	listen 80;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
 	    return 301 https://$server_name$request_uri;
 	}
 }
@@ -25,11 +22,20 @@ server {
 	}
 
 	location @bluestore {
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
+		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header Host $host;
 	    proxy_pass http://bluestore;
-		proxy_http_version 1.1;
+		# proxy_http_version 1.1;
+		# proxy_set_header Upgrade $http_upgrade;
+		# proxy_set_header Connection "upgrade";
+	}
+
+	location /socket.io {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
+		proxy_http_version 1.1;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+		proxy_pass http://bluestore/socket.io/;
 	}
 }
