--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -36,6 +36,6 @@ server {
 		proxy_http_version 1.1;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
-		proxy_pass http://bluestore/socket.io/;
+		proxy_pass http://bluestore/socket.io;
 	}
 }
