--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,10 @@ upstream bluestore {
     server bluestore:5000;
 }
 
+upstream socket.io {
+    server bluestore:5000;
+}
+
 server {
 	listen 80;
 	server_name blackstoregb.com www.blackstoregb.com;
@@ -30,12 +34,12 @@ server {
 		# proxy_set_header Connection "upgrade";
 	}
 
-	location /socket.io {
+	location @socket.io {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 		proxy_http_version 1.1;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
-		proxy_pass http://bluestore/socket.io;
+		proxy_pass http://bluestore;
 	}
 }
