--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,15 +1,17 @@
 upstream bluestore {
     server bluestore:5000;
 }
-
-upstream socket.io {
-    server bluestore:5000;
-}
-
 server {
 	listen 80;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+
 	    return 301 https://$server_name$request_uri;
 	}
 }
@@ -26,20 +28,11 @@ server {
 	}
 
 	location @bluestore {
-		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		# proxy_set_header Host $host;
-	    proxy_pass http://bluestore;
-		# proxy_http_version 1.1;
-		# proxy_set_header Upgrade $http_upgrade;
-		# proxy_set_header Connection "upgrade";
-	}
-
-	location @socket.io {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
-		proxy_pass http://bluestore;
+	    proxy_pass http://bluestore;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
 	}
 }
