--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "@socket.io/pm2": "^5.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "coinbase-commerce-node": "^1.0.4",
@@ -54,7 +55,6 @@
     "passport.socketio": "^3.7.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "pm2": "^5.1.1",
     "redis": "^4.0.0-rc.1",
     "sequelize": "^6.5.0",
     "sharp": "^0.28.3",
