--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,12 @@
 upstream bluestore {
-    server bluestore:5000;
+	server bluestore:5000;
 }
 
 server {
 	listen 80;
 	server_name blackstoregb.com www.blackstoregb.com;
 	location / {
-	    return 301 https://$server_name$request_uri;
+		return 301 https://$server_name$request_uri;
 	}
 }
 
@@ -21,12 +21,15 @@ server {
 		try_files $uri $uri/ @bluestore;
 	}
 
-	location @bluestore { 
-	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	  proxy_set_header Host $host;
-	  proxy_pass http://bluestore;
-	  proxy_http_version 1.1;
-	  proxy_set_header Upgrade $http_upgrade;
-	  proxy_set_header Connection "upgrade";
+	location @bluestore {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header Host $host;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+
+		proxy_pass http://bluestore;
 	}
 }
