--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "@socket.io/cluster-adapter": "^0.1.0",
+    "@socket.io/sticky": "^1.0.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "coinbase-commerce-node": "^1.0.4",
