--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,16 @@ upstream bluestore {
 	server bluestore:5000;
 }
 
+upstream nodes {
+
+    hash $remote_addr consistent;
+
+    server 0.0.0.0:8000;
+    server 0.0.0.0:8001;
+    server 0.0.0.0:8002;
+    server 0.0.0.0:8003;
+}
+
 server {
 	listen 80;
 	server_name blackstoregb.com www.blackstoregb.com;
