--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@socket.io/cluster-adapter": "^0.1.0",
+    "@socket.io/redis-adapter": "^7.0.0",
     "@socket.io/sticky": "^1.0.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -60,6 +61,7 @@
     "sequelize": "^6.5.0",
     "sharp": "^0.28.3",
     "socket.io": "^4.2.0",
+    "socket.io-adapter-sequelize": "^0.0.4",
     "xlsx": "^0.17.0"
   },
   "jest": {
