--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,18 @@
 upstream bluestore {
 	server bluestore:5000;
+	# server bluestore:5001;
+	# server bluestore:5002;
+	# server bluestore:5003;
+	keepalive 64;
 }
 
-server {
-	listen 80;
-	server_name blackstoregb.com www.blackstoregb.com;
-	location / {
-		return 301 https://$server_name$request_uri;
-	}
-}
+# server {
+# 	listen 80;
+# 	server_name blackstoregb.com www.blackstoregb.com;
+# 	location / {
+# 		return 301 https://$server_name$request_uri;
+# 	}
+# }
 
 server {
 	listen 443 ssl;
@@ -31,5 +35,7 @@ server {
 		proxy_set_header Connection "upgrade";
 
 		proxy_pass http://bluestore;
+		proxy_redirect off;
+		proxy_read_timeout 240s;
 	}
 }
