--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
-    "pm2": "pm2 start ecosystem.config.js",
+    "pm2": "pm2-runtime start ecosystem.config.js",
     "pm2:stop": "pm2 stop processes.json",
     "pm2:list": "pm2 list",
     "pm2:delete": "pm2 delete processes.json",
