--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,17 @@
-upstream bluestore {
+upstream app {
 	server bluestore:5000;
-	# server bluestore:5001;
-	# server bluestore:5002;
-	# server bluestore:5003;
-	keepalive 64;
-}
+	#server bluestore:5001;
+	#server bluestore:5002;
+	#server bluestore:5003;
+}	
 
-# server {
-# 	listen 80;
-# 	server_name blackstoregb.com www.blackstoregb.com;
-# 	location / {
-# 		return 301 https://$server_name$request_uri;
-# 	}
-# }
+#server {
+#	listen 80;
+#	server_name blackstoregb.com www.blackstoregb.com;
+#	location / {
+#		return 301 https://$server_name$request_uri;
+#	}
+#}
 
 server {
 	listen 443 ssl;
@@ -34,8 +33,9 @@ server {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 
-		proxy_pass http://bluestore;
+		proxy_pass http://app;
 		proxy_redirect off;
 		proxy_read_timeout 240s;
 	}
 }
+
