update to nodes

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,8 @@
-upstream app {
+upstream nodes {
 	server bluestore:5000;
-	#server bluestore:5001;
-	#server bluestore:5002;
-	#server bluestore:5003;
+	server bluestore:5001;
+	server bluestore:5002;
+	server bluestore:5003;
 }	
 
 #server {
@@ -33,7 +33,7 @@ server {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 
-		proxy_pass http://app;
+		proxy_pass http://nodes;
 		proxy_redirect off;
 		proxy_read_timeout 240s;
 	}
