--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,9 @@
 FROM nginx:alpine
 
+RUN rm /etc/nginx/conf.d/default.conf
+
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 COPY ./blackstoregb_com* /etc/nginx/
 
-CMD [ "nginx", "-g", "daemon off;" ]
+#CMD [ "nginx", "-g", "daemon off;" ]
