--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,9 @@
 upstream nodes {
-	server bluestore:5000;
-	server bluestore:5001;
-	server bluestore:5002;
-	server bluestore:5003;
+	ip_hash;
+	server bluestore_1:5001;
+	server bluestore_2:5002;
+	server bluestore_3:5003;
+	server bluestore_4:5004;
 }	
 
 #server {
@@ -21,10 +22,10 @@ server {
 
 	location / {
 		root /app/resources;
-		try_files $uri $uri/ @bluestore;
+		try_files $uri $uri/ @nodes;
 	}
 
-	location @bluestore {
+	location @nodes {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header Host $host;
