--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
       - COINBASE_API_KEY:${COINBASE_API_KEY}
       - SHAREDSECRET:${SHAREDSECRET}
       - PORT=${PORT_1}
+      - BINANCE_MARCHANTID=${BINANCE_MARCHANTID}
+      - BINANCE_API_KEY=${BINANCE_API_KEY}
+      - BINANCE_SECRET_KEY=${BINANCE_SECRET_KEY}
     depends_on:
       - postgres
       - redis
@@ -74,6 +77,9 @@ services:
       - COINBASE_API_KEY:${COINBASE_API_KEY}
       - SHAREDSECRET:${SHAREDSECRET}
       - PORT=${PORT_2}
+      - BINANCE_MARCHANTID=${BINANCE_MARCHANTID}
+      - BINANCE_API_KEY=${BINANCE_API_KEY}
+      - BINANCE_SECRET_KEY=${BINANCE_SECRET_KEY}
     depends_on:
       - postgres
       - redis
@@ -96,6 +102,9 @@ services:
       - COINBASE_API_KEY:${COINBASE_API_KEY}
       - SHAREDSECRET:${SHAREDSECRET}
       - PORT:${PORT_3}
+      - BINANCE_MARCHANTID=${BINANCE_MARCHANTID}
+      - BINANCE_API_KEY=${BINANCE_API_KEY}
+      - BINANCE_SECRET_KEY=${BINANCE_SECRET_KEY}
     depends_on:
       - postgres
       - redis
@@ -118,6 +127,8 @@ services:
       - COINBASE_API_KEY:${COINBASE_API_KEY}
       - SHAREDSECRET:${SHAREDSECRET}
       - PORT=${PORT_4}
+      - BINANCE_API_KEY=${BINANCE_API_KEY}
+      - BINANCE_SECRET_KEY=${BINANCE_SECRET_KEY}
     depends_on:
       - postgres
       - redis
