--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       - DB_HOST:${DB_HOST}
       - DB_SCHEMA:${DB_SCHEMA}
       - DB_USER:${DB_USER}
-      - DB_PASSWORD:${DB_USER}
-      - REDIS_USER:${DB_USER}
+      - DB_PASSWORD:${DB_PASSWORD}
+      - REDIS_USER:${REDIS_USER}
       - REDIS_PASSWORD:${REDIS_PASSWORD}
       - REDIS_PORT:${REDIS_PORT}
       - COINBASE_API_KEY:${COINBASE_API_KEY}
@@ -69,8 +69,8 @@ services:
       - DB_HOST:${DB_HOST}
       - DB_SCHEMA:${DB_SCHEMA}
       - DB_USER:${DB_USER}
-      - DB_PASSWORD:${DB_USER}
-      - REDIS_USER:${DB_USER}
+      - DB_PASSWORD:${DB_PASSWORD}
+      - REDIS_USER:${REDIS_USER}
       - REDIS_PASSWORD:${REDIS_PASSWORD}
       - REDIS_PORT:${REDIS_PORT}
       - COINBASE_API_KEY:${COINBASE_API_KEY}
@@ -93,8 +93,8 @@ services:
       - DB_HOST:${DB_HOST}
       - DB_SCHEMA:${DB_SCHEMA}
       - DB_USER:${DB_USER}
-      - DB_PASSWORD:${DB_USER}
-      - REDIS_USER:${DB_USER}
+      - DB_PASSWORD:${DB_PASSWORD}
+      - REDIS_USER:${REDIS_USER}
       - REDIS_PASSWORD:${REDIS_PASSWORD}
       - REDIS_PORT:${REDIS_PORT}
       - COINBASE_API_KEY:${COINBASE_API_KEY}
@@ -117,8 +117,8 @@ services:
       - DB_HOST:${DB_HOST}
       - DB_SCHEMA:${DB_SCHEMA}
       - DB_USER:${DB_USER}
-      - DB_PASSWORD:${DB_USER}
-      - REDIS_USER:${DB_USER}
+      - DB_PASSWORD:${DB_PASSWORD}
+      - REDIS_USER:${REDIS_USER}
       - REDIS_PASSWORD:${REDIS_PASSWORD}
       - REDIS_PORT:${REDIS_PORT}
       - COINBASE_API_KEY:${COINBASE_API_KEY}
