--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "sequelize": "^6.5.0",
     "sharp": "^0.28.3",
     "socket.io": "^4.2.0",
-    "uuidv4": "^6.2.12",
+    "uuid": "^8.3.2",
     "xlsx": "^0.17.0"
   },
   "jest": {
