--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@socket.io/redis-adapter": "^7.0.0",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "coinbase-commerce-node": "^1.0.4",
