--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "Backend Application for Holesale Digital Services",
   "scripts": {
-    "pm2": "pm2 start ecosystem.config.js",
-    "pm2:stop": "pm2 stop processes.json",
-    "pm2:list": "pm2 list",
-    "pm2:delete": "pm2 delete processes.json",
     "start:dev": "webpack --env development --config ./tools/webpack.dev.js --watch",
     "build": "webpack --env production --config ./tools/webpack.prod.js",
     "start": "node ./dist/main",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "db:migrations": "sequelize-cli db:migrate",
+    "db:migrations-down": "sequelize-cli db:migrate:undo"
   },
   "repository": {
     "type": "git",
@@ -31,6 +29,7 @@
     "dotenv-webpack": "^6.0.0",
     "jest": "^26.6.3",
     "nodemon-webpack-plugin": "^4.4.4",
+    "sequelize-cli": "^6.3.0",
     "supertest": "^6.1.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.4.0",
