--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,7 @@
-const path = require('path')
+const path = require('path');
 
 module.exports = {
   'migrations-path': path.resolve('server', 'migrations'),
-  'url': 'postgres://postgres:postgres@postgres:5432/postgres',
+  "config": path.resolve('./server/config', 'db.config.js'),
+  // 'url': 'postgres://postgres:postgres@postgres:5432/postgres',
 }
