add txtFile reader

--- a/.gitignore
+++ b/.gitignore
@@ -108,9 +108,11 @@ dist
 .tern-port
 
 # assets
-# resources/static/assets/pictures/*
+resources/static/assets/pictures/*
 resources/temporary/*
 certificate/
 
 # SSL
 nginx/blackstoregb_com*
+
+id*
