--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
     "body-parser": "^1.19.0",
     "coinbase-commerce-node": "^1.0.4",
     "compression": "^1.7.4",
-    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "pg": "^8.5.1",
