--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start:dev": "webpack --env development --config ./tools/webpack.dev.js --watch",
     "build": "webpack --env production --config ./tools/webpack.prod.js",
-    "start": "node ./dist/main",
+    "start": "npm run build && node ./dist/main ",
     "test": "jest --watch",
     "db:migrations": "sequelize-cli db:migrate",
     "db:migrations-down": "sequelize-cli db:migrate:undo"
